# hap-rs

./: .gitignore  Cargo.toml
codegen/src/: main.rs
examples/: firmware_update.rs  tap_management.rs
src/: config.rs  error.rs  hap_type.rs  tlv.rs
src/server/: ip.rs  mod.rs
src/transport/: mdns.rs  tcp.rs
src/transport/http/: mod.rs  server.rs
src/transport/http/handler/: accessories.rs  characteristics.rs  identify.rs  mod.rs  pair_setup.rs  pair_verify.rs  pairings.rs
