[package]
name = "hap"
version = "0.1.0-pre.15"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2021"
description = "Rust implementation of the Apple HomeKit Accessory Protocol (HAP)"
documentation = "https://docs.rs/hap"
readme = "README.md"
repository = "https://github.com/ewilken/hap-rs"
license = "MIT/Apache-2.0"
keywords = ["apple", "homekit"]
exclude = [
    ".github",
    ".gitignore",
    "examples",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rls.toml",
    "rustfmt.toml",
]

[dependencies]
async-trait = "0.1"
byteorder = "1.5"
bytes = "1.0"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.0", features = ["std", "serde"] }
erased-serde = "0.3"
macaddr = { version = "1.0.1", features = ["serde"] }
futures = "0.3"
generic-array = { version = "1", features = ["compat-0_14"] }
get_if_addrs = "0.5"
hkdf = "0.11"
hyper = { version = "0.14", features = ["server", "http1"] }
libmdns = "0.10"
log = "0.4"
num = "0.4"
rand = { version = "0.9", features = [ "os_rng" ] }
rand_core = { version = "0.9", features = [ "os_rng" ] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
sha2 = "0.9"
signature = "2.2"
srp = "0.5"
thiserror = "2.0"
tokio = "1.48"
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
x25519-dalek = "2"

[build-dependencies]
handlebars = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "time", "macros"] }

[workspace]
members = ["codegen"]
